# evm-interpreter

./: .clang-tidy  CMakeLists.txt  README.md
example/: main.cpp
lib/magic_enum/: magic_enum.cppm
src/: interpreter.cppm
